--- a/about.html
+++ b/about.html
@@ -293,7 +293,7 @@
                          <div class="icon-box">
                            <i class="fa-light fa-eye-low-vision"></i>
                          </div>
-                          Vission
+                          Vision
                       </a>
                    </li>
                    <li class="nav-item" role="presentation">
